After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 608815 - users-admin deletes LDAP users from /etc/groups
users-admin deletes LDAP users from /etc/groups
Status: RESOLVED FIXED
Product: gnome-system-tools
Classification: Deprecated
Component: users-admin
2.28.x
Other Linux
: Normal normal
: ---
Assigned To: system-tools-maint
system-tools-maint
Depends on:
Blocks:
 
 
Reported: 2010-02-02 17:13 UTC by James Jones
Modified: 2010-02-06 11:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
one of two files for debugging GNOME system tools (886 bytes, text/x-log)
2010-02-02 23:09 UTC, James Jones
Details

Description James Jones 2010-02-02 17:13:13 UTC
I have a system running Ubuntu Karmic Koala set up to allow LDAP authentication of users. I have added some of those users to some groups using the usermod command, and as expected, looking in /etc/groups they appear on the line for the groups I add them to.

After that, running users-admin to add a user or group causes those users to be wiped from /etc/groups. This is, to say the least, not an action I expected; I believe it to be a bug, but if this is actually a feature that can be turned on or off via configuration, I'd greatly appreciate a pointer to instructions on doing so.
Comment 1 Milan Bouchet-Valat 2010-02-02 17:28:57 UTC
Thanks for the report. I've just checked the code and I don't think that's an expected result. What may happen is that LDAP users aren't known, so the GUI could remove them from the list of members of the group. Then the backends remove those users because it believes the GUI wants it.

Could you reproduce such a bug when following the instructions for groups at:
https://wiki.ubuntu.com/DebuggingGnomeSystemTools

Then we should see in the logs whether the users where explicitly removed from the groups or not.

BTW, users-admin and the System Tools Backends don't support LDAP users at the moment (as you must have noticed), at best we can make them live side-by-side without conflict.
Comment 2 James Jones 2010-02-02 23:09:28 UTC
Created attachment 152890 [details]
one of two files for debugging GNOME system tools
Comment 3 James Jones 2010-02-02 23:11:40 UTC
The other file, users-admin.log, proved to be empty.
Comment 4 Milan Bouchet-Valat 2010-02-03 11:43:10 UTC
Sorry if I wasn't clear enough: when I said "for groups", I meant using that command:
sudo killall /usr/bin/perl; sudo /usr/share/system-tools-backends-2.0/scripts/SystemToolsBackends.pl -m GroupsConfig -v &> ~/stb-groups.log

(You can forget users-admin.log id it was empty the first time.)
Comment 5 Milan Bouchet-Valat 2010-02-03 12:27:11 UTC
Hmm, forget about this, I've found where the problem lies in liboobs. We're indeed only adding known users to the group, forcing removal of all non-/etc/passwd ones. I'll see if I can fix that for the next version.
Comment 6 James Jones 2010-02-03 16:09:11 UTC
Thank you! We'll stick with the command line in the meantime.
Comment 7 Milan Bouchet-Valat 2010-02-06 11:50:27 UTC
This should be fixed with commit b581b86, which will be released on Monday in 2.29.90. It will be in Ubuntu Lucid. Please test when you can, and reopen if it's not working as expected.